--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-Bro TCP Log Writer Plugin
-=========================
+Zeek (Bro) TCP Log Writer Plugin
+================================
 
-A Bro log writer that sends logging output using TCP, optionally
+A Zeek (Bro) log writer that sends logging output using TCP, optionally
 using TLS.
 
 Many thanks to the ncsa/bro-zeromq-writer which I used as a model
